--- a/epi_judge_python/scratchpad.ipynb
+++ b/epi_judge_python/scratchpad.ipynb
@@ -1,8 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Chapter 5"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
@@ -13,89 +20,286 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def matrix_in_spiral_order(square_matrix: List[List[int]]) -> List[int]:\n",
-    "\n",
-    "    def matrix_layer_in_clockwise(offset):\n",
-    "        if offset == len(square_matrix) - offset - 1:\n",
-    "            spiral_ordering.append(square_matrix[offset][offset])\n",
-    "            return\n",
-    "\n",
-    "        spiral_ordering.extend(square_matrix[offset][offset:-1-offset])\n",
-    "        spiral_ordering.extend(\n",
-    "            list(zip(*square_matrix))[-1-offset][offset:-1-offset])\n",
-    "        spiral_ordering.extend(square_matrix[-1-offset][-1-offset:offset:-1])\n",
-    "        spiral_ordering.extend(list(zip(*square_matrix))[offset][-1-offset:offset:-1])\n",
-    "\n",
-    "    spiral_ordering: List[int] = []\n",
-    "    for offset in range((len(square_matrix)+1)//2):\n",
-    "        matrix_layer_in_clockwise(offset)\n",
-    "    return spiral_ordering"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 17,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "a = [[4, 2], [3, 1]]"
+    "# def matrix_in_spiral_order(square_matrix: List[List[int]]) -> List[int]:\n",
+    "\n",
+    "#     def matrix_layer_in_clockwise(offset):\n",
+    "#         if offset == len(square_matrix) - offset - 1:\n",
+    "#             spiral_ordering.append(square_matrix[offset][offset])\n",
+    "#             return\n",
+    "\n",
+    "#         spiral_ordering.extend(square_matrix[offset][offset:-1-offset])\n",
+    "#         spiral_ordering.extend(\n",
+    "#             list(zip(*square_matrix))[-1-offset][offset:-1-offset])\n",
+    "#         spiral_ordering.extend(square_matrix[-1-offset][-1-offset:offset:-1])\n",
+    "#         spiral_ordering.extend(list(zip(*square_matrix))[offset][-1-offset:offset:-1])\n",
+    "\n",
+    "#     spiral_ordering: List[int] = []\n",
+    "#     for offset in range((len(square_matrix)+1)//2):\n",
+    "#         matrix_layer_in_clockwise(offset)\n",
+    "#     return spiral_ordering"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[4, 2, 1, 3]"
-      ]
-     },
-     "execution_count": 33,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "matrix_in_spiral_order(a)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 18,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "a = [ [1,2,3],[4,5,6],[7,8,9]]"
+    "# a = [[4, 2], [3, 1]]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# matrix_in_spiral_order(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# a = [ [1,2,3],[4,5,6],[7,8,9]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# a[0][1]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Chapter 6"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "s = \"isthisreal\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2"
+       "'i'"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "a[0][1]"
+    "s[4]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'s'"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s[~4]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-5"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "~4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "aa=list(range(5))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "aa[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "aa[~1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def int_to_string(x: int) -> str:\n",
+    "    if x<0:\n",
+    "        sign = \"-\"\n",
+    "    else:\n",
+    "        sign = \"\"\n",
+    "    x = abs(x)\n",
+    "    digits = []\n",
+    "    if x == 0:\n",
+    "        return \"0\"\n",
+    "    while x>0:\n",
+    "        digits.append(chr(ord('0')+x%10))\n",
+    "        x=x//10\n",
+    "    retval = sign+\"\".join(reversed(digits))\n",
+    "    return retval"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def string_to_int(s: str) -> int:\n",
+    "    string_digits = \"0123456789\"\n",
+    "    if s[0] == \"-\":\n",
+    "        sign = -1\n",
+    "        s = s[1:]\n",
+    "    elif s[0] == \"+\":\n",
+    "        sign = 1\n",
+    "        s = s[1:]\n",
+    "    else:\n",
+    "        sign = 1\n",
+    "    running_sum = 0\n",
+    "    for char in s:\n",
+    "        running_sum = running_sum*10 + string_digits.index(char)\n",
+    "    return sign*running_sum"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "''"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "int_to_string(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4176473"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "string_to_int(\"+4176473\")"
    ]
   },
   {
